<resources>
    <string name="app_name">SiuptApp</string>

    <string-array name="my_header_title">
        <item></item>
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>quinta</item>
        <item>Sexta</item>
    </string-array>

    <string name="login">Insira os seus dados de Login</string>
    <string name="numero">Número</string>
    <string name="Hintnumero">Insira o seu número de utilizador</string>
    <string name="passe">Palavra-Passe</string>
    <string name="Hintpasse">Insira a sua palavra-passe</string>
    <string name="loginB">Login</string>

    <string name="nextActivity">Próxima Actividade</string>

    <string name="timeTable">Horario</string>
    <string name="notas">Notas</string>
    <string name="ementa">Ementa</string>
    <string name="UCs">UCs Inscritas</string>

    <string name="voltar">Voltar</string>
    <string name="boas">Bem-Vindo!</string>




</resources>